--- a/HomeWork2/src/main/webapp/WEB-INF/web.xml
+++ b/HomeWork2/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,6 @@
          metadata-complete="false">
     <display-name>HomeWork2</display-name>
     <welcome-file-list>
-        <welcome-file>signUp.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
