--- a/HomeWork2/src/main/webapp/WEB-INF/web.xml
+++ b/HomeWork2/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,17 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>by.it_academy.jd2.web.filters.SecurityFilter</filter-class>
+        <init-param>
+            <param-name>active</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>/chat</url-pattern>
+        <url-pattern>/message</url-pattern>
+    </filter-mapping>
 </web-app>
